Fixed the navbar overlap bug
Hurray!

--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,11 @@ p {
 	padding:5px;
 }
 
-img {
-	margin:5px;
-	padding:5px;
+#header img{
+		width: 100%;
+		height:100%;
+		margin:3px;
+		padding:3px;
 }
 
 #navbar {
